# EventStreamCore

./: .gitignore  ARCHITECTURE_COMPLETE.md  ARCHITECTURE_FINAL_ASSESSMENT.md  BUILD_COMPLETE.md  CMakeLists.txt  DAY22_COMPLETE_STATUS.md  DAY22_TO_DAY23_ASSESSMENT.md  DAY22_VS_DAY23_DETAILED.md  DAY23_IMPLEMENTATION_GUIDE.md  DAY34_LOCKFREE_COMPLETE.md  DAY35_OPTIMIZATION_COMPLETE.md  DAY35_SUMMARY.md  DAY36_RAFT_COMPLETE.md  DAY36_STATUS_REPORT.md  DAY37_EVENT_LIFETIME_DESIGN.md  DAY37_FINAL_STATUS.md  DAY38_NUMA_BINDING_COMPLETE.md  DAY39_OPTIMIZATION_COMPLETE.md  DAY40_COMPLETE.md  DAY40_PROJECT_STATUS.md  DAY40_STRATEGY_FINAL.md  DAY40_SUMMARY.md  EXECUTIVE_SUMMARY_DAY35.md  FINAL_STATUS_REPORT.md  HEALTH_CHECK_SUMMARY.md  NUMACTL_USAGE_GUIDE.md  OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_SCAN_REPORT.md  OPTIMIZATION_SUMMARY.md  PRE_DAY37_EVENT_POOL_COMPLETE.md  PROJECT_HEALTH_CHECK.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  READY_TO_BUILD.md  REVIEW_RESULTS.md  SESSION_PRE_DAY37_SUMMARY.md  STATUS_DAY35.txt  STATUS_PRE_DAY37.md  VISUAL_COMPARISON_DAY22_VS_DAY23.md  (+3 more)
Test/: EventTest.cpp
benchmark/: CMakeLists.txt  benchmark.cpp  benchmark_dedup.cpp  benchmark_event_pool.cpp  benchmark_eventbus_multi.cpp  benchmark_main.cpp  benchmark_mpsc.cpp  benchmark_output.txt  benchmark_spsc.cpp  benchmark_spsc_detailed.cpp  benchmark_summary.cpp
benchmarks/results/: day31_baseline.txt  day32_clock_fixed.txt  day32_summary.txt  day33_optimized.txt
build_test/: CMakeCache.txt
config/: config.yaml  topics.conf
diagrams/: 01_Event_Ingest_To_Dispatch.puml  02_Realtime_Processor.puml  03_Transactional_Processor.puml  04_Batch_Processor.puml  05_Dedup_CAS_Insert.puml  06_Async_Metrics.puml  07_Event_Lifecycle.puml  08_Complete_Flow.puml  09_SPSC_RingBuffer.puml  README.md
distributed_layer/: DESIGN.md  IMPLEMENTATION_PLAN.md  INDEX.md  WEEK40_DAY1.md
doc_core/: README.md  architecture.md  event.md  memory.md  queues.md
doc_distributed/: README.md  cluster.md  raft.md  replication.md
doc_microservice/: README.md  grpc.md  kubernetes.md  monitoring.md  operations.md
docs/core/: README.md
docs/distributed/: README.md
docs/microservices/: README.md
engine_documents/: CORE_ENGINE_ASSESSMENT.md  CORE_ENGINE_QUICK_REFERENCE.md  CORE_ENGINE_TECHNICAL_DOCUMENTATION.md  DAY39_FINAL_STATUS.md  INDEX.md  SEQUENCE_DIAGRAMS.md  SEQUENCE_DIAGRAMS_PLANTUML.md
include/admin/: AdminLoop.hpp  ControlDecision.hpp  admin_loop.hpp
include/config/: AppConfig.hpp
include/control/: Control_plane.hpp  PipelineState.hpp
include/core/: numa_binding.hpp
include/event/: DeadLetterQueue.hpp  Dispatcher.hpp  Event.hpp  EventBusMulti.hpp  EventFactory.hpp  Topic_table.hpp  Types.hpp
include/eventprocessor/: EventProcessor.hpp  ProcessManager.hpp  event_processor.hpp  metricRegistry.hpp  metricRepoter.hpp  metrics.hpp  processManager.hpp  realtime_processor.hpp
include/ingest/: IngestEventPool.hpp  frame_parser.hpp  ingest_server.hpp  tcp_event_pool.hpp  tcp_parser.hpp  tcpingest_server.hpp  udpingest_server.hpp
include/memory/: event_memorypool.hpp  memory_allocator.hpp
include/metrics/: MetricRegistry.hpp  latency_histogram.hpp  metricRegistry.hpp  metricRepoter.hpp  metrics.hpp
include/storage_engine/: storage_engine.hpp
include/utils/: mpsc_queue.hpp  spsc_ringBuffer.hpp  thread_affinity.hpp  thread_pool.hpp
knowledge/: 01_architecture_overview.md  02_lock_free_programming.md  03_memory_and_numa.md  04_cpp17_patterns.md  05_event_pipeline.md  06_processors_and_dlq.md  07_networking_and_protocol.md  08_metrics_and_control.md  09_bridge_and_sdks.md  10_design_patterns.md  11_interview_qa.md  README.md
scripts/: load_test_tcp.sh  pre_day37_report.sh
sdk/go/: README.md  microservices.go
sdk/python/: README.md  microservices.py  pyproject.toml  test_engine.py
sdk/python/esccore/: __init__.py  adapter.py  engine.py  types.py
src/: main.cpp
src/admin/: AdminLoop.cpp  CMakeLists.txt  admin_loop.cpp
src/app/: main.cpp
src/bridge/: CMakeLists.txt  esccore.cpp
src/cluster/: CMakeLists.txt  raft.cpp
src/config/: ConfigLoader.cpp
src/control/: CMakeLists.txt  ControlPlane.cpp  PipelineState.cpp  control_plane.cpp
src/core/: CMakeLists.txt
src/core/admin/: admin_loop.cpp
src/core/config/: config_loader.cpp
src/core/control/: control_plane.cpp  pipeline_state.cpp
src/core/events/: dead_letter_queue.cpp  dispatcher.cpp  event_bus.cpp  event_factory.cpp  topic_table.cpp
src/core/ingest/: epoll.cpp  epoll_server.cpp  frame_parser.cpp  tcp.cpp  tcp_server.cpp  udp.cpp  udp_server.cpp
src/core/metrics/: registry.cpp
src/core/processor/: batch.cpp  batch_processor.cpp  manager.cpp  process_manager.cpp  realtime.cpp  realtime_processor.cpp  transactional.cpp  transactional_processor.cpp
src/core/queues/: dedup.cpp  lock_free_dedup.cpp  spsc.cpp  spsc_ring_buffer.cpp
src/core/storage/: storage.cpp  storage_engine.cpp
src/core/utils/: thread_pool.cpp
src/distributed/: CMakeLists.txt  raft.cpp
src/event/: CMakeLists.txt  DeadLetterQueue.cpp  Dispatcher.cpp  EventBusMulti.cpp  EventFactory.cpp  TopicTable.cpp  Topic_table.cpp
src/event_processor/: CMakeLists.txt  ProcessManager.cpp  batch_processor.cpp  metricReporter.cpp  processManager.cpp  realtime_processor.cpp  transactional_processor.cpp
src/ingest/: CMakeLists.txt  frame_parser.cpp  tcp_parser.cpp  tcpingest_server.cpp  udpingest_server.cpp
src/metrics/: CMakeLists.txt  MetricRegistry.cpp  metricRegistry.cpp  metricReporter.cpp
src/microservice/: CMakeLists.txt  grpc_gateway.cpp  health_service.cpp
src/storage_engine/: storage_engine.cpp
src/utils/: CMakeLists.txt  (+5 more)
tests/: README.md  run_test.py  send_tcp_event.py  send_udp_event.py  stress_test.py  test_load.py  test_system.py
unittest/: CMakeLists.txt  ConfigLoaderTest.cpp  EventProcessorTest.cpp  EventTest.cpp  LockFreeDedup_Test.cpp  RaftTest.cpp  StorageTest.cpp  TcpingestTest.cpp  config_loader_test.cpp  event_processor_test.cpp  event_test.cpp  lock_free_dedup_test.cpp  raft_test.cpp  storage_test.cpp  tcp_ingest_test.cpp
(+62 files in other folders)
